Add /count
